--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "2.0.1",
   "author": "Futoshi Iwashita <jaxx2104@gmail.com>",
   "dependencies": {
+    "bootstrap.native": "^2.0.25",
+    "final-form": "^4.12.0",
     "gatsby": "2.1.27",
     "gatsby-image": "2.0.31",
     "gatsby-link": "2.0.14",
@@ -28,7 +30,8 @@
     "gatsby-remark-smartypants": "2.0.8",
     "gatsby-source-filesystem": "2.0.23",
     "gatsby-transformer-remark": "2.3.1",
-    "gatsby-transformer-sharp": "2.1.15"
+    "gatsby-transformer-sharp": "2.1.15",
+    "react-final-form": "^4.1.0"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.14",
